--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ coverage
 
 # Local app data that should not be shared
 data/*.xlsx
+!data/embers-habits.xlsx
 data/habit-day-log.json
 data/projects.json
 data/pixcope-services.backup-*.xlsx
